--- a/index.html
+++ b/index.html
@@ -10,3 +10,237 @@
 
   </body>
 </html>
+
+
+<!DOCTYPE html>
+<html lang="ru">
+
+<head>
+  <meta charset="utf-8">
+  <title>Дизайн-студия "Нердс"</title>
+  <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap&subset=cyrillic" rel="stylesheet">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/style.css">
+</head>
+
+<body>
+  <header class="main-header">
+    <div class="container">
+      <nav class="main-navigation">
+        <a class="main-header-logo">
+          <img src="img/nerds-logo.svg" width="160" height="65" alt="Логотип студии Нёрдс">
+        </a>
+        <ul class="site-navigation reset-list">
+          <li><a href="#">Студия</a></li>
+          <li><a href="#">Клиенты</a></li>
+          <li><a href="nerds-catalog.html">Магазин</a></li>
+          <li><a href="#">Контакты</a></li>
+        </ul>
+        <ul class="user-navigation reset-list">
+          <li>
+            <a class="basket" href="basket.html">Корзина</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+  <section class="slider">
+    <div class="container">
+      <h2 class="visually-hidden">Преимущества</h2>
+      <input class="visually-hidden" type="radio" id="product-1" name="toggle" checked>
+      <input class="visually-hidden" type="radio" id="product-2" name="toggle">
+      <input class="visually-hidden" type="radio" id="product-3" name="toggle">
+
+      <div class="slider-controls">
+        <label class="slider-controls-item slider-controls-item--1" for="product-1">Первый</label>
+        <label class="slider-controls-item slider-controls-item--2" for="product-2">Второй</label>
+        <label class="slider-controls-item slider-controls-item--3" for="product-3">Третий</label>
+
+        <i class="active"></i>
+        <i></i>
+        <i></i>
+      </div>
+
+      <ul class="slider-list reset-list">
+        <li class="slider-item">
+          <h3 class="reset-text">Долго, дорого,<br> скрупулезно.</h3>
+          <p class="reset-text">Математически выверенный дизайн<br> для вашего сайта или мобильного приложения.</p>
+          <a class="slider-item-button button" href="#">Узнать больше</a>
+        </li>
+        <li class="slider-item">
+          <h3 class="reset-text">Любим математику как никто другой</h3>
+          <p class="reset-text">Никакого креатива, только математические формулы для расчета идеальных пропорций.</p>
+          <a class="slider-item-button button" href="#">Узнать больше</a>
+        </li>
+        <li class="slider-item">
+          <h3 class="reset-text">Только ночь,<br> только хардкор</h3>
+          <p class="reset-text">Работать днем, как все? Мы против этого.<br> Ближе к полуночи работа только начинается.</p>
+          <a class="slider-item-button button" href="#">Узнать больше</a>
+        </li>
+      </ul>
+    </div>
+  </section>
+
+  <main class="container">
+    <h2 class="visually-hidden">Наши услуги</h2>
+    <section class="advantages">
+
+      <div class="advantages-item">
+        <div class="advantages-image-wrapper">
+          <img src="img/advantage-picture-red.jpg" alt="Заказать веб-сайт" width="300" height="146">
+        </div>
+        <h3 class="reset-text">Веб-сайты</h3>
+        <p class="reset-text">Мир никогда не будет прежним после того, как увидит ваш сайт!</p>
+        <a class="button button-advantages" href="#">Заказать</a>
+      </div>
+
+      <div class="advantages-item">
+        <div class="advantages-image-wrapper">
+          <img src="img/advantage-picture-green.jpg" alt="Заказать приложение" width="300" height="146">
+        </div>
+        <h3 class="reset-text">Приложения</h3>
+        <p class="reset-text">Покорите топ-10 приложений в Appstore и Google Play</p>
+        <a class="button green button-advantages" href="#">Заказать</a>
+      </div>
+
+      <div class="advantages-item">
+        <div class="advantages-image-wrapper">
+          <img src="img/advantage-picture-yellow.jpg" alt="Заказать презентацию" width="300" height="146">
+        </div>
+        <h3 class="reset-text">Презентации</h3>
+        <p class="reset-text">Вы даже не подозреваете, насколько вы изумительны!</p>
+        <a class="button yellow button-advantages" href="#">Заказать</a>
+      </div>
+    </section>
+
+
+    <h3 class="visually-hidden">О студии Нёрдс</h3>
+    <div class="about">
+      <section class="studio-nerds">
+        <h3 class="who-we-are reset-text">Мы — маленькая, но гордая дизайн-студия из Краснодара.</h3>
+        <p class="reset-text">Исповедуем принципы минимализма и чистоты. Ставим математический расчёт превыше креатива.
+          Работаем, не покладая рук, как роботы.</p>
+        <div class="services-wrapper">
+          <h4 class="reset-text">Выполняем заказы на разработку:</h4>
+          <ul class="reset-list">
+            <li class="services-list">Веб-сайтов любой сложности</li>
+            <li class="services-list">Мобильных приложений для iOS и Android</li>
+            <li class="services-list">Слайдшоу и видео для корпоративных презентаций</li>
+          </ul>
+        </div>
+      </section>
+
+      <section class="stats-nerds">
+        <div class="nerds-picture-wrapper">
+          <img src="img/nerds-picture.jpg" alt="Логотип Студии Нёрдс" width="360" height="208">
+        </div>
+        <h4 class="what-we-do reset-text">С 2004 года любим точность во всём:</h4>
+        <ul class="stat-percents reset-list">
+          <li class="percents">146<sup class="percents sup">%</sup></li>
+          <li class="percents">100<sup class="percents sup">%</sup></li>
+          <li class="percents">50<sup class="percents sup">%</sup></li>
+        </ul>
+        <ul class="great-conditions reset-list">
+          <li class="great-great-conditions">Уровень самоотдачи</li>
+          <li class="great-great-conditions">Соблюдение сроков</li>
+          <li class="great-great-conditions">Минимальная предоплата</li>
+        </ul>
+      </section>
+    </div>
+
+    <section class="partners">
+      <h3 class="visually-hidden">Логотипы партнёров</h3>
+      <ul class="partners-list reset-list">
+        <li> <a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/htmlacademy-logo.png" width="199" height="68" alt="Логотип Html Academy"></a></li>
+        <li><a href="#"><img src="img/borodinski-logo.png" width="209" height="90" alt="Логотип Бородинский"></a></li>
+        <li><a href="#"><img src="img/pink-logo.png" width="185" height="52" alt="Логотип Пинк"></a></li>
+        <li><a href="#"><img src="img/mishka-logo.png" width="173" height="84" alt="Логотип Мишка"></a></li>
+      </ul>
+    </section>
+  </main>
+
+
+  <footer class="main-footer">
+    <section class="contacts">
+      <h3 class="visually-hidden">Как нас найти?</h3>
+      <div class="map-wrapper">
+        <div class="write-us">
+          <div class="write-us-text">
+            <span class="write-us-name reset-text">NЁRDS DESIGN STUDIO</span>
+            <address>191186, Санкт-Петербург, <br> ул. Б. Конюшенная, д. 19/8, </address>
+            <br>
+            <span class="tel">тел. +7 (812) 275-75-75</span>
+            <a href="write-us.html" class="button button-write-us">Напишите нам</a>
+          </div>
+        </div>
+        <img src="img/map.png" width="1440" height="416" alt="Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург">
+      </div>
+
+
+    </section>
+    <div class="container main-footer-content">
+      <section class="footer-social">
+        <h3 class="visually-hidden">Студия Нёрдс в соцсетях</h3>
+        <ul class="reset-list">
+          <li>
+            <a class="social-button" href="#"><span class="visually-hidden">В контакте</span>
+              <svg xmlns="http://www.w3.org/2000/svg" width="26" height="15" viewBox="0 0 26 15">
+                <path fill="#FFF"
+                  d="M16.138 11.51c.956-.309 2.18 2.04 3.483 2.939.978.681 1.727.534 1.727.534l3.473-.05s1.815-.112.957-1.554c-.071-.12-.503-1.069-2.585-3.022-2.177-2.043-1.882-1.712.739-5.244 1.597-2.153 2.236-3.468 2.036-4.028-.192-.539-1.365-.399-1.365-.399L20.69.713c-.381.001-.704.119-.851.515-.003.004-.621 1.666-1.445 3.079-1.741 2.989-2.436 3.148-2.724 2.961-.661-.433-.494-1.737-.494-2.664 0-2.897.432-4.105-.846-4.417-.427-.104-.739-.172-1.828-.182-1.392-.021-2.574 0-3.244.329-.445.223-.786.712-.579.74.26.035.843.16 1.155.586.401.552.389 1.789.389 1.789s.229 3.411-.54 3.834c-.528.29-1.25-.302-2.803-3.016-.793-1.388-1.392-2.922-1.392-2.922s-.116-.285-.326-.441c-.25-.185-.6-.244-.6-.244L.848.684S.29.7.085.946c-.182.218-.015.668-.015.668s2.909 6.881 6.203 10.347c3.02 3.182 6.452 2.971 6.452 2.971h1.555s.469-.054.709-.312c.224-.24.214-.691.214-.691s-.031-2.109.935-2.419z" />
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a class="social-button" href="#"><span class="visually-hidden">Facebook</span>
+              <svg xmlns="http://www.w3.org/2000/svg" width="12" height="22" viewBox="0 0 12 22">
+                <path fill="#FFF" d="M12 4V0H8a4 4 0 0 0-4 4v4H0v4h4v10h4V12h4V8H8V4h4z" />
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a class="social-button" href="#"><span class="visually-hidden">Instagram</span>
+              <svg xmlns="http://www.w3.org/2000/svg" width="21" height="21" viewBox="0 0 21 21">
+                <path fill="#fff"
+                  d="M18 0H3C1.35 0 0 1.35 0 3v15c0 1.65 1.35 3 3 3h15c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3zm-7.5 7c1.93 0 3.5 1.57 3.5 3.5S12.43 14 10.5 14 7 12.43 7 10.5 8.57 7 10.5 7zM18 18H3V9h1.181A6.504 6.504 0 0 0 4 10.5a6.5 6.5 0 1 0 13 0 6.45 6.45 0 0 0-.181-1.5H18zm0-11h-4V3h4z" />
+              </svg>
+            </a>
+          </li>
+          <!--здесь может быть еще одна кнопка<li><a class="social-button" href="#"></a></li>-->
+        </ul>
+      </section>
+      <div class="social-discount">
+        <h4 class="reset-text">Давайте дружить, это выгодно!</h4>
+        <!--здесь нужно поменять тег х4 на п и добавть скрытый визуалли хидден заголовок "нердс в социальных сетях""-->
+        <p class="reset-text">Скидка 10% для друзей из социальных сетей</p>
+      </div>
+    </div>
+  </footer>
+
+
+  <!--всплывающее окно записи в список-->
+  <div class="popup-email-form">
+    <h3 class="reset-text">Напишите нам</h3>
+    <form class="contact-form" method="post" action="https://echo.htmlacademy.ru">
+      <div class="name-email">
+        <p class="reset-text">
+          <label for="user-name">Ваше имя</label>
+          <input class="input-text" id="user-name" type="text" name="name" placeholder="Имя Фамилия">
+        </p>
+      </div>
+      <div class="name-email">
+        <p class="reset-text">
+          <label for="user-email">Ваш e-mail</label>
+          <input class="input-text" id="user-email" type="email" name="email" placeholder="e-mail@example.com">
+        </p>
+      </div>
+      <p class="reset-text">
+        <label for="message-text">Текст письма</label>
+        <input class="input-text" id="message-text" type="text" name="text" placeholder="В свободной форме">
+      </p>
+      <button class="button" type="submit">Отправить</button>
+    </form>
+  </div>
+</body>
+
+</html>
