--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
       </section>
       <div class="social-discount">
         <h4 class="reset-text">Давайте дружить, это выгодно!</h4>
-        <!--здесь нужно поменять тег х4 на п и добавть скрытый визуалли хидден заголовок "нердс в социальных сетях""-->
+        <!--здесь нужно поменять х4 на p и добавть скрытый визуалли хидден заголовок "нердс в социальных сетях""-->
         <p class="reset-text">Скидка 10% для друзей из социальных сетей</p>
       </div>
     </div>
