--- a/catalog.html
+++ b/catalog.html
@@ -25,7 +25,7 @@
 
         <ul class="user-navigation reset-list">
           <li>
-            <a class="basket" href="basket.html">Корзина</a>
+            <a class="basket" href="#">Корзина</a>
           </li>
         </ul>
       </nav>
