--- a/index.html
+++ b/index.html
@@ -1,23 +1,9 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Нёрдс</title>
-  </head>
-  <body>
-
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
-
-  </body>
-</html>
-
-
-<!DOCTYPE html>
-<html lang="ru">
 
 <head>
   <meta charset="utf-8">
-  <title>Дизайн-студия "Нердс"</title>
+  <title>HTML Academy: Нёрдс</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap&subset=cyrillic" rel="stylesheet">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
@@ -33,12 +19,12 @@
         <ul class="site-navigation reset-list">
           <li><a href="#">Студия</a></li>
           <li><a href="#">Клиенты</a></li>
-          <li><a href="nerds-catalog.html">Магазин</a></li>
+          <li><a href="catalog.html">Магазин</a></li>
           <li><a href="#">Контакты</a></li>
         </ul>
         <ul class="user-navigation reset-list">
           <li>
-            <a class="basket" href="basket.html">Корзина</a>
+            <a class="basket" href="#">Корзина</a>
           </li>
         </ul>
       </nav>
@@ -65,17 +51,17 @@
       <ul class="slider-list reset-list">
         <li class="slider-item">
           <h3 class="reset-text">Долго, дорого,<br> скрупулезно.</h3>
-          <p class="reset-text">Математически выверенный дизайн<br> для вашего сайта или мобильного приложения.</p>
+          <p class="reset-text">Математически выверенный дизайн </br> для вашего сайта или мобильного приложения.</p>
           <a class="slider-item-button button" href="#">Узнать больше</a>
         </li>
         <li class="slider-item">
           <h3 class="reset-text">Любим математику как никто другой</h3>
-          <p class="reset-text">Никакого креатива, только математические формулы для расчета идеальных пропорций.</p>
+          <p class="reset-text">Никакого креатива, только математические формулы </br> для расчета идеальных пропорций.</p>
           <a class="slider-item-button button" href="#">Узнать больше</a>
         </li>
         <li class="slider-item">
           <h3 class="reset-text">Только ночь,<br> только хардкор</h3>
-          <p class="reset-text">Работать днем, как все? Мы против этого.<br> Ближе к полуночи работа только начинается.</p>
+          <p class="reset-text">Работать днем, как все? Мы против этого.</br> Ближе к полуночи работа только начинается.</p>
           <a class="slider-item-button button" href="#">Узнать больше</a>
         </li>
       </ul>
@@ -88,7 +74,7 @@
 
       <div class="advantages-item">
         <div class="advantages-image-wrapper">
-          <img src="img/advantage-picture-red.jpg" alt="Заказать веб-сайт" width="300" height="146">
+          <img src="img/advantage-picture-red.png" alt="Заказать веб-сайт" width="300" height="146">
         </div>
         <h3 class="reset-text">Веб-сайты</h3>
         <p class="reset-text">Мир никогда не будет прежним после того, как увидит ваш сайт!</p>
@@ -97,7 +83,7 @@
 
       <div class="advantages-item">
         <div class="advantages-image-wrapper">
-          <img src="img/advantage-picture-green.jpg" alt="Заказать приложение" width="300" height="146">
+          <img src="img/advantage-picture-green.png" alt="Заказать приложение" width="300" height="146">
         </div>
         <h3 class="reset-text">Приложения</h3>
         <p class="reset-text">Покорите топ-10 приложений в Appstore и Google Play</p>
@@ -106,7 +92,7 @@
 
       <div class="advantages-item">
         <div class="advantages-image-wrapper">
-          <img src="img/advantage-picture-yellow.jpg" alt="Заказать презентацию" width="300" height="146">
+          <img src="img/advantage-picture-yellow.png" alt="Заказать презентацию" width="300" height="146">
         </div>
         <h3 class="reset-text">Презентации</h3>
         <p class="reset-text">Вы даже не подозреваете, насколько вы изумительны!</p>
@@ -133,7 +119,7 @@
 
       <section class="stats-nerds">
         <div class="nerds-picture-wrapper">
-          <img src="img/nerds-picture.jpg" alt="Логотип Студии Нёрдс" width="360" height="208">
+          <img src="img/nerds-picture.png" alt="Логотип Студии Нёрдс" width="360" height="208">
         </div>
         <h4 class="what-we-do reset-text">С 2004 года любим точность во всём:</h4>
         <ul class="stat-percents reset-list">
@@ -174,7 +160,7 @@
             <a href="write-us.html" class="button button-write-us">Напишите нам</a>
           </div>
         </div>
-        <img src="img/map.png" width="1440" height="416" alt="Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург">
+        <img src="img/map.png" width="1440" height="416" alt="Карта с адресом компании: ул. Большая Конюшенная 19/8, Санкт-Петербург">
       </div>
 
 
@@ -219,7 +205,7 @@
 
 
   <!--всплывающее окно записи в список-->
-  <div class="popup-email-form">
+  <div class="popup-email-form visually-hidden">
     <h3 class="reset-text">Напишите нам</h3>
     <form class="contact-form" method="post" action="https://echo.htmlacademy.ru">
       <div class="name-email">
