--- a/catalog.html
+++ b/catalog.html
@@ -19,7 +19,7 @@
         <ul class="site-navigation reset-list">
           <li><a href="#">Студия</a></li>
           <li><a href="#">Клиенты</a></li>
-          <li class="site-navigation-current"><a href="#">Магазин</a></li>
+          <li class="site-navigation-current"><a>Магазин</a></li>
           <li><a href="#">Контакты</a></li>
         </ul>
         <ul class="user-navigation reset-list">
