--- a/index.html
+++ b/index.html
@@ -51,17 +51,17 @@
       <ul class="slider-list reset-list">
         <li class="slider-item">
           <h3 class="reset-text">Долго, дорого,<br> скрупулезно.</h3>
-          <p class="reset-text">Математически выверенный дизайн </br> для вашего сайта или мобильного приложения.</p>
+          <p class="reset-text">Математически выверенный дизайн <br> для вашего сайта или мобильного приложения.</p>
           <a class="slider-item-button button" href="#">Узнать больше</a>
         </li>
         <li class="slider-item">
           <h3 class="reset-text">Любим математику как никто другой</h3>
-          <p class="reset-text">Никакого креатива, только математические формулы </br> для расчета идеальных пропорций.</p>
+          <p class="reset-text">Никакого креатива, только математические формулы <br> для расчета идеальных пропорций.</p>
           <a class="slider-item-button button" href="#">Узнать больше</a>
         </li>
         <li class="slider-item">
           <h3 class="reset-text">Только ночь,<br> только хардкор</h3>
-          <p class="reset-text">Работать днем, как все? Мы против этого.</br> Ближе к полуночи работа только начинается.</p>
+          <p class="reset-text">Работать днем, как все? Мы против этого.<br> Ближе к полуночи работа только начинается.</p>
           <a class="slider-item-button button" href="#">Узнать больше</a>
         </li>
       </ul>
