--- a/catalog.html
+++ b/catalog.html
@@ -103,7 +103,7 @@
                 </li>
               </ul>
             </fieldset>
-            <button class="button sort-by" type="submit">Показать</button>
+            <button class="button button-sort-by" type="submit">Показать</button>
           </form>
         </div>
       </section>
@@ -324,12 +324,12 @@
         <textarea class="text-message-content" id="message-text" name="text" placeholder="В свободной форме"></textarea>
       </p>
       <button class="button red" type="submit">Отправить</button>
+      </form>
       <button class="close-button" type="button" aria-label="Закрыть"><svg xmlns="http://www.w3.org/2000/svg" width="21" height="21" viewBox="0 0 21 21">
           <path fill="#FB565A"
             d="M13.328 10.5l7.371-7.371a1.003 1.003 0 0 0 0-1.414L19.285.3a1.003 1.003 0 0 0-1.414 0L10.5 7.672 3.129.301a1.003 1.003 0 0 0-1.414 0L.301 1.715a1.003 1.003 0 0 0 0 1.414L7.672 10.5.301 17.871a1.003 1.003 0 0 0 0 1.414l1.415 1.414a1.003 1.003 0 0 0 1.414 0l7.371-7.371 7.371 7.371a1.003 1.003 0 0 0 1.414 0l1.414-1.414a1.003 1.003 0 0 0 0-1.414L13.328 10.5z" />
         </svg>
       </button>
-    </form>
   </div>
 </body>
 
