--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 
 
   <!--всплывающее окно записи в список-->
-  <div class="popup-email-form visually-hidden">
+  <div class="popup-email-form">
     <h3 class="reset-text">Напишите нам</h3>
     <form class="contact-form" method="post" action="https://echo.htmlacademy.ru">
       <div class="name-email">
@@ -226,6 +226,7 @@
       </p>
       <button class="button" type="submit">Отправить</button>
     </form>
+    <button class="modal-close" type="button">Закрыть</button>
   </div>
 </body>
 
