--- a/index.html
+++ b/index.html
@@ -138,10 +138,10 @@
     <section class="partners">
       <h3 class="visually-hidden">Логотипы партнёров</h3>
       <ul class="partners-list reset-list">
-        <li> <a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/htmlacademy-logo.png" width="199" height="68" alt="Логотип Html Academy"></a></li>
-        <li><a href="#"><img src="img/borodinski-logo.png" width="209" height="90" alt="Логотип Бородинский"></a></li>
-        <li><a href="#"><img src="img/pink-logo.png" width="185" height="52" alt="Логотип Пинк"></a></li>
-        <li><a href="#"><img src="img/mishka-logo.png" width="173" height="84" alt="Логотип Мишка"></a></li>
+        <li class="partners-item partners-item--htmlacademy"><a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/htmlacademy-logo.png" width="199" height="68" alt="Логотип Html Academy"></a></li>
+        <li class="partners-item partners-item--borodinski"><a href="#"><img src="img/borodinski-logo.png" width="209" height="90" alt="Логотип Бородинский"></a></li>
+        <li class="partners-item partners-item--pink"><a href="#"><img src="img/pink-logo.png" width="185" height="52" alt="Логотип Пинк"></a></li>
+        <li class="partners-item partners-item--mishka"><a href="#"><img src="img/mishka-logo.png" width="173" height="84" alt="Логотип Мишка"></a></li>
       </ul>
     </section>
   </main>
