--- a/catalog.html
+++ b/catalog.html
@@ -63,16 +63,16 @@
             <fieldset class="grid-fieldset reset-fieldset">
               <legend class="legend">Сетка</legend>
               <ul class="type reset-list">
-                <li>
-                  <input type="radio" name="grid" value="adaptive-grid" id="filter-adaptive-grid" checked>
+                <li class="filter-option">
+                  <input class="visually-hidden filter-input-radio" type="radio" name="grid" value="adaptive-grid" id="filter-adaptive-grid" checked>
                   <label for="filter-adaptive-grid">Адаптивная</label>
                 </li>
-                <li>
-                  <input type="radio" name="grid" value="fixed-grid" id="filter-fixed-grid">
+                <li class="filter-option">
+                  <input class="visually-hidden filter-input-radio" type="radio" name="grid" value="fixed-grid" id="filter-fixed-grid">
                   <label for="filter-fixed-grid">Фиксированная</label>
                 </li>
-                <li>
-                  <input type="radio" name="grid" value="fluid-grid" id="filter-fluid-grid">
+                <li class="filter-option">
+                  <input class="visually-hidden filter-input-radio" type="radio" name="grid" value="fluid-grid" id="filter-fluid-grid">
                   <label for="filter-fluid-grid">Резиновая</label>
                 </li>
               </ul>
@@ -81,24 +81,24 @@
             <fieldset class="specificities-fieldset reset-fieldset">
               <legend class="legend">Особенности</legend>
               <ul class="details reset-list">
-                <li>
-                  <input type="checkbox" name="slider" id="filter-slider" checked>
+                <li class="filter-option">
+                  <input class="visually-hidden filter-input-checkbox" type="checkbox" name="slider" id="filter-slider" checked>
                   <label for="filter-slider">Слайдер</label>
                 </li>
-                <li>
-                  <input type="checkbox" name="advantages" id="filter-advantages">
+                <li class="filter-option">
+                  <input class="visually-hidden filter-input-checkbox" type="checkbox" name="advantages" id="filter-advantages">
                   <label for="filter-advantages">Блок преимуществ</label>
                 </li>
-                <li>
-                  <input type="checkbox" name="news" id="filter-news" checked>
+                <li class="filter-option">
+                  <input class="visually-hidden filter-input-checkbox" type="checkbox" name="news" id="filter-news" checked>
                   <label for="filter-news">Новости</label>
                 </li>
-                <li>
-                  <input type="checkbox" name="gallery" id="filter-gallery">
+                <li class="filter-option">
+                  <input class="visually-hidden filter-input-checkbox" type="checkbox" name="gallery" id="filter-gallery">
                   <label for="filter-gallery">Галерея</label>
                 </li>
-                <li>
-                  <input type="checkbox" name="basket" id="filter-basket">
+                <li class="filter-option">
+                  <input class="visually-hidden filter-input-checkbox" type="checkbox" name="basket" id="filter-basket">
                   <label for="filter-basket">Корзина</label>
                 </li>
               </ul>
@@ -146,14 +146,11 @@
 
             <li class="catalog-item">
               <h2 class="visually-hidden">Седона</h2>
-              <svg xmlns="http://www.w3.org/2000/svg" width="360" height="40" viewBox="0 0 360 40">
-                <path fill="#4D4D4D" d="M356 0H4C1.8 0 0 1.8 0 4v36h360V4c0-2.2-1.8-4-4-4zM22.991 27a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14z" />
-              </svg>
               <div class="catalog-image-wrapper">
                 <img src="img/img-sedona-jpg.jpg" width="360" height="576" alt="Информационный сайт для туристов">
               </div>
               <section class="catalog-popup">
-                <h3 class="reset-text"><a href="#">Sedona</a></h3>
+                <h3 class="reset-text catalog-popup-text"><a href="#">Sedona</a></h3>
                 <p class="reset-text">Информационный сайт для туристов</p>
                 <a class="button button-price" href="#">9900 РУБ.</a>
               </section>
@@ -161,14 +158,11 @@
 
             <li class="catalog-item">
               <h2 class="visually-hidden">Pink App</h2>
-              <svg xmlns="http://www.w3.org/2000/svg" width="360" height="40" viewBox="0 0 360 40">
-                <path fill="#4D4D4D" d="M356 0H4C1.8 0 0 1.8 0 4v36h360V4c0-2.2-1.8-4-4-4zM22.991 27a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14z" />
-              </svg>
               <div class="catalog-image-wrapper">
                 <img src="img/img-pink-jpg.jpg" width="360" height="576" alt="Продуктовый лендинг приложения для iOS и Android">
               </div>
               <section class="catalog-popup">
-                <h3 class="reset-text"><a href="#">Pink App</a></h3>
+                <h3 class="reset-text catalog-popup-text"><a href="#">Pink App</a></h3>
                 <p class="reset-text">Продуктовый лендинг приложения для iOS и Android</p>
                 <a class="button button-price" href="#">9900 РУБ.</a>
               </section>
@@ -176,14 +170,11 @@
 
             <li class="catalog-item">
               <h2 class="visually-hidden">Barbershop</h2>
-              <svg xmlns="http://www.w3.org/2000/svg" width="360" height="40" viewBox="0 0 360 40">
-                <path fill="#4D4D4D" d="M356 0H4C1.8 0 0 1.8 0 4v36h360V4c0-2.2-1.8-4-4-4zM22.991 27a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14z" />
-              </svg>
               <div class="catalog-image-wrapper">
                 <img src="img/img-barbershop-jpg.jpg" width="360" height="576" alt="Сайт салона красоты для мужчин.">
               </div>
               <section class="catalog-popup">
-                <h3 class="reset-text"><a href="#">Barbershop</a></h3>
+                <h3 class="reset-text catalog-popup-text"><a href="#">Barbershop</a></h3>
                 <p class="reset-text">Сайт салона красоты для мужчин, да.</p>
                 <a class="button button-price" href="#">9900 РУБ.</a>
               </section>
@@ -191,14 +182,11 @@
 
             <li class="catalog-item">
               <h2 class="visually-hidden">Mishka</h2>
-              <svg xmlns="http://www.w3.org/2000/svg" width="360" height="40" viewBox="0 0 360 40">
-                <path fill="#4D4D4D" d="M356 0H4C1.8 0 0 1.8 0 4v36h360V4c0-2.2-1.8-4-4-4zM22.991 27a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14z" />
-              </svg>
               <div class="catalog-image-wrapper">
                 <img src="img/img-mishka-jpg.jpg" width="360" height="576" alt="Магазин товаров ручной работы для дома">
               </div>
               <section class="catalog-popup">
-                <h3 class="reset-text"><a href="#">MISHKA</a></h3>
+                <h3 class="reset-text catalog-popup-text"><a href="#">MISHKA</a></h3>
                 <p class="reset-text">Интернет-магазин вязаных игрушек</p>
                 <a class="button button-price" href="#">9900 РУБ.</a>
               </section>
@@ -207,14 +195,11 @@
 
             <li class="catalog-item">
               <h2 class="visually-hidden">A Plus</h2>
-              <svg xmlns="http://www.w3.org/2000/svg" width="360" height="40" viewBox="0 0 360 40">
-                <path fill="#4D4D4D" d="M356 0H4C1.8 0 0 1.8 0 4v36h360V4c0-2.2-1.8-4-4-4zM22.991 27a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14z" />
-              </svg>
               <div class="catalog-image-wrapper">
                 <img src="img/img-aplus-jpg.jpg" width="360" height="576" alt="Лендинг курсов повышения квалификации">
               </div>
               <section class="catalog-popup">
-                <h3 class="reset-text"><a href="#">A Plus</a></h3>
+                <h3 class="reset-text catalog-popup-text"><a href="#">A Plus</a></h3>
                 <p class="reset-text">Лендинг курсов повышения квалификации</p>
                 <a class="button button-price" href="#">9900 РУБ.</a>
               </section>
@@ -223,14 +208,11 @@
 
             <li class="catalog-item">
               <h2 class="visually-hidden">КВАСТ</h2>
-              <svg xmlns="http://www.w3.org/2000/svg" width="360" height="40" viewBox="0 0 360 40">
-                <path fill="#4D4D4D" d="M356 0H4C1.8 0 0 1.8 0 4v36h360V4c0-2.2-1.8-4-4-4zM22.991 27a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14z" />
-              </svg>
               <div class="catalog-image-wrapper">
                 <img src="img/img-kvast-jpg.jpg" width="360" height="576" alt="Промо-сайт производителя крафтового кваса">
               </div>
               <section class="catalog-popup">
-                <h3 class="reset-text"><a href="#">КВАСТ</a></h3>
+                <h3 class="reset-text catalog-popup-text"><a href="#">КВАСТ</a></h3>
                 <p class="reset-text">Промо-сайт производителя крафтового кваса</p>
                 <a class="button button-price" href="#">9900 РУБ.</a>
               </section>
@@ -324,12 +306,12 @@
         <textarea class="text-message-content" id="message-text" name="text" placeholder="В свободной форме"></textarea>
       </p>
       <button class="button red" type="submit">Отправить</button>
-      </form>
-      <button class="close-button" type="button" aria-label="Закрыть"><svg xmlns="http://www.w3.org/2000/svg" width="21" height="21" viewBox="0 0 21 21">
-          <path fill="#FB565A"
-            d="M13.328 10.5l7.371-7.371a1.003 1.003 0 0 0 0-1.414L19.285.3a1.003 1.003 0 0 0-1.414 0L10.5 7.672 3.129.301a1.003 1.003 0 0 0-1.414 0L.301 1.715a1.003 1.003 0 0 0 0 1.414L7.672 10.5.301 17.871a1.003 1.003 0 0 0 0 1.414l1.415 1.414a1.003 1.003 0 0 0 1.414 0l7.371-7.371 7.371 7.371a1.003 1.003 0 0 0 1.414 0l1.414-1.414a1.003 1.003 0 0 0 0-1.414L13.328 10.5z" />
-        </svg>
-      </button>
+    </form>
+    <button class="close-button" type="button" aria-label="Закрыть"><svg xmlns="http://www.w3.org/2000/svg" width="21" height="21" viewBox="0 0 21 21">
+        <path fill="#FB565A"
+          d="M13.328 10.5l7.371-7.371a1.003 1.003 0 0 0 0-1.414L19.285.3a1.003 1.003 0 0 0-1.414 0L10.5 7.672 3.129.301a1.003 1.003 0 0 0-1.414 0L.301 1.715a1.003 1.003 0 0 0 0 1.414L7.672 10.5.301 17.871a1.003 1.003 0 0 0 0 1.414l1.415 1.414a1.003 1.003 0 0 0 1.414 0l7.371-7.371 7.371 7.371a1.003 1.003 0 0 0 1.414 0l1.414-1.414a1.003 1.003 0 0 0 0-1.414L13.328 10.5z" />
+      </svg>
+    </button>
   </div>
 </body>
 
