--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <title>HTML Academy: Нёрдс</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap&subset=cyrillic" rel="stylesheet">
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/style.css">
+  <!-- <link rel="stylesheet" href="css/style.css"> -->
+  <link rel="stylesheet" href="css/style.min.css">
 </head>
 
 <body>
@@ -209,24 +210,22 @@
     <h3 class="reset-text">Напишите нам</h3>
     <form class="contact-form" method="post" action="https://echo.htmlacademy.ru">
       <div class="name-email">
-        <p class="reset-text">
-          <label for="user-name">Ваше имя</label>
-          <input class="input-text" id="user-name" type="text" name="name" placeholder="Имя Фамилия">
+        <p class="reset-text section-text-name">
+          <label class="popup-email-form-label" for="user-name">Ваше имя</label>
+          <input class="popup-email-form-input input-text input-text-name" id="user-name" type="text" name="name" placeholder="Имя Фамилия">
         </p>
-      </div>
-      <div class="name-email">
         <p class="reset-text">
-          <label for="user-email">Ваш e-mail</label>
-          <input class="input-text" id="user-email" type="email" name="email" placeholder="e-mail@example.com">
+          <label class="popup-email-form-label" for="user-email">Ваш e-mail</label>
+          <input class="popup-email-form-input input-text" id="user-email" type="email" name="email" placeholder="e-mail@example.com">
         </p>
       </div>
       <p class="reset-text">
-        <label for="message-text">Текст письма</label>
-        <input class="input-text" id="message-text" type="text" name="text" placeholder="В свободной форме">
+        <label class="popup-email-form-label" for="message-text">Текст письма</label>
+        <textarea class="popup-email-form-input input-textarea" id="message-text" name="text" placeholder="В свободной форме"></textarea>
       </p>
-      <button class="button" type="submit">Отправить</button>
+      <button class="button red" type="submit">Отправить</button>
     </form>
-    <button class="modal-close" type="button">Закрыть</button>
+    <button class="close-button" type="button" aria-label="Закрыть"></button>
   </div>
 </body>
 
