--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
             <span class="write-us-name reset-text">NЁRDS DESIGN STUDIO</span>
             <address>191186, Санкт-Петербург, <br> ул. Б. Конюшенная, д. 19/8, </address>
             <br>
-            <span class="tel">тел. +7 (812) 275-75-75</span>
+            <a href="tel:+78122757575"><span class="tel">тел. +7 (812) 275-75-75</span></a>
             <a href="write-us.html" class="button button-write-us">Напишите нам</a>
           </div>
         </div>
@@ -193,12 +193,11 @@
               </svg>
             </a>
           </li>
-          <!--здесь может быть еще одна кнопка<li><a class="social-button" href="#"></a></li>-->
+          <!--здесь может быть еще одна кнопка социальных сетей<li><a class="social-button" href="#"></a></li>-->
         </ul>
       </section>
       <div class="social-discount">
         <h4 class="reset-text">Давайте дружить, это выгодно!</h4>
-        <!--здесь нужно поменять х4 на p и добавть скрытый визуалли хидден заголовок "нердс в социальных сетях""-->
         <p class="reset-text">Скидка 10% для друзей из социальных сетей</p>
       </div>
     </div>
